--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,11 @@
         <version>2.7.3</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.sinaghz</groupId>
-    <artifactId>demo</artifactId>
+    <groupId>org.psp</groupId>
+    <artifactId>springbootgraphql</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>demo</name>
-    <description>demo</description>
+    <name>springbootgraphql</name>
+    <description>springbootgraphql</description>
     <properties>
         <java.version>11</java.version>
     </properties>
